# cat-neural-net

./: .gitignore  Cargo.toml
config/: generate_cats_and_dogs.toml
src/: main.rs
