[package]
name = "cat_neural_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
